<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">ProyectoAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_eres_miembro_resistrate">¿No eres miembro? <u>Registrate</u> </string>
    <string name="ya_eres_miembro_inicia">¿Ya eres miembro? <u>Inicia sesión</u> </string>
    <string name="registrate"><u>Registrate</u></string>
    <string name="opiniones"><u>Opiniones</u></string>
    <string name="email_enviado_con_exito">Email enviado con éxito</string>
    <string name="bienvenido_a_doble_b">Bienvenido a Doble B</string>
    <string name="inicia_sesion_para_poder_continuar">Inicia sesion para poder continuar</string>
    <string name="introduce_el_nombre_de_usuario">Introduce el nombre de usuario</string>
    <string name="introduce_tu_email">Introduce tu email</string>
    <string name="introduce_tu_nueva_contrase_a">Introduce tu nueva contraseña</string>
    <string name="enviar_email">Enviar Email</string>
    <string name="contrase_a_cambiada">Contraseña cambiada</string>
    <string name="contrase_a_cambiada_con_xito">Contraseña cambiada con éxito</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="repite_tu_contrase_a">Repite tu contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="o">O</string>
    <string name="login_con_google">Login con GOOGLE</string>
    <string name="login_con_facebook">Login con Facebook</string>
    <string name="has_olvidado_la_contrase_a">¿Has olvidado la contraseña?</string>
    <string name="a_adir_productos">Añadir productos</string>
    <string name="productos_a_adidos_con_xito">Productos añadidos con éxito</string>
    <string name="banadeja_de_notificaciones_vac_a">Banadeja de notificaciones Vacía</string>
    <string name="gracias_por_comprar_en_doble_b">Gracias por comprar en Doble B</string>
    <string name="volver_al_explorador">Volver al explorador</string>
    <string name="tu_carrito">Tu Carrito</string>
    <string name="items">items</string>
    <string name="env_o">Envío</string>
    <string name="descuento">descuento</string>
    <string name="_0">0€</string>
    <string name="precio_total">Precio Total</string>
    <string name="proceder_al_pago">Proceder al pago</string>
    <string name="_0_resultados">0 resultados</string>
    <string name="su_bolsa_est_vac_a">Su bolsa está vacía</string>
    <string name="pulse_para_explorar_productos">Pulse para explorar productos</string>
    <string name="buscar">Buscar</string>
    <string name="moda_hombre">Moda Hombre</string>
    <string name="moda_mujer">Moda mujer</string>
    <string name="perfil">Perfil</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="mis_pedidos">Mis Pedidos</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="pulsa_para_a_adir_productos">Pulsa para añadir Productos</string>
    <string name="comprar_hombre">Comprar Hombre</string>
    <string name="comprar_mujer">Comprar Mujer</string>
    <string name="cambiar_fecha_nacimiento">Cambiar fecha nacimiento</string>
    <string name="cambio_n_mero_de_telefono">Cambio número de telefono</string>
    <string name="introduce_tu_nuevo_numero_de_tel_fono">Introduce tu nuevo numero de teléfono</string>
    <string name="tu_numero_de_telefono">Tu numero de telefono</string>
    <string name="cambiar_n_mero">Cambiar número</string>
    <string name="cuenta_creada">Cuenta creada</string>
    <string name="cuenta_creada_con_xito">Cuenta creada con éxito</string>
    <string name="detalle_pedido">Detalle pedido</string>
    <string name="producto">Producto</string>
    <string name="detalles_del_env_o">Detalles del envío</string>
    <string name="fecha_compra">Fecha compra:</string>
    <string name="no_id">No.id</string>
    <string name="correo">Correo</string>
    <string name="detalles_del_pago">Detalles del pago</string>
    <string name="pvp_env_o">PVP envío</string>
    <string name="cargos_adicionales">Cargos adicionales</string>
    <string name="tu_direcci_n">Tu dirección</string>
    <string name="pagar">pagar</string>
    <string name="ninguna_direcci_n_encontrada">Ninguna dirección encontrada</string>
    <string name="gracias_por_comprar_en_doble_b2">Gracias por comprar en Doble B</string>
    <string name="pulsa_para_a_adir_una_direccion">Pulsa para añadir una direccion</string>
    <string name="introduce_tu_email_para_poder">Introduce tu email para poder</string>
    <string name="notificarte_de_stock">Notificarte de stock</string>
    <string name="enviar_email3">Enviar Email</string>
    <string name="escribir_opinion">Escribir opinion</string>
    <string name="valora_el_producto_seg_n_tu_satisfacci_n">Valora el producto según tu satisfacción</string>
    <string name="escribe_una_opinion_del_producto">Escribe una opinion del producto</string>
    <string name="escribe_aqui_tu_opinion">Escribe aqui tu opinion</string>
    <string name="confirmar">Confirmar</string>
    <string name="direccion_de_env_o3">Direccion de envío</string>
    <string name="introduce_tu_direcci_n">Introduce tu dirección</string>
    <string name="tu_direccion">Tu direccion</string>
    <string name="introduce_tu_n_mero_de_tel_fono">Introduce tu número de teléfono</string>
    <string name="guardar">Guardar</string>
    <string name="direccion_de_env_o2">Direccion de envío</string>
    <string name="credit_card_or_debit">Credit Card Or Debit</string>
    <string name="paypal">Paypal</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="mi_cuenta2">Mi cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="identidad">Identidad</string>
    <string name="cumplea_os">Cumpleaños</string>
    <string name="fecha_cumple">Fecha cumple</string>
    <string name="email">Email</string>
    <string name="num_telefono">Num telefono</string>
    <string name="tu_telefono">tu telefono</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="tu_contrasenia">tu contrasenia</string>
    <string name="cambio_de_contrase_a">Cambio de contraseña</string>
    <string name="introduce_tu_contrase_a_actual">Introduce tu contraseña actual</string>
    <string name="tu_contrase_a">Tu contraseña</string>
    <string name="introduce_tu_nueva_contrase_a2">Introduce tu nueva contraseña</string>
    <string name="repite_tu_nueva_contrase_a">Repite tu nueva contraseña</string>
    <string name="cambiar_contrase_a2">Cambiar contraseña</string>
    <string name="introduce_tu_email_para_poder2">Introduce tu email para poder</string>
    <string name="recuperar_la_contrase_a">Recuperar la contraseña</string>
    <string name="introduce_tu_email2">Introduce tu email</string>
    <string name="enviar_email2">Enviar Email</string>
    <string name="_0_resultados2">0 resultados</string>
    <string name="producto_no_encontrado">Producto no encontrado</string>
    <string name="volver_al_explorador2">Volver al explorador</string>
    <string name="tu_nombre">Tu nombre</string>
    <string name="editar">Editar</string>
    <string name="iva_incluido">iva incluido</string>
    <string name="_0_productos_encontrados_en_favoritos">0 Productos encontrados en Favoritos</string>
    <string name="su_lista_de_favoritos_est_vac_a">Su lista de favoritos está vacía</string>
    <string name="tu_lista_de_favoritos">Tu Lista de Favoritos</string>
    <string name="direccion_de_env_o">Direccion de envío</string>
    <string name="n_mero_de_tarjeta">Número de tarjeta</string>
    <string name="_1111_1111_1111_1111">1111-1111-1111-1111</string>
    <string name="fecha_de_cadicudad">Fecha de cadicudad</string>
    <string name="c_digo_de_seguridad">Código de seguridad</string>
    <string name="_525">525</string>
    <string name="todas_opiniones">Todas Opiniones</string>
    <string name="pago_realizado_con_xito">Pago realizado con éxito</string>
    <string name="volver_a_tienda">Volver a tienda</string>
    <string name="color">Color:</string>
    <string name="a_adir_a_bolsa">Añadir a bolsa</string>
    <string name="cambio_de_nombre">Cambio de Nombre</string>
    <string name="introduce_tu_nuevo_email">Introduce tu nuevo email</string>
    <string name="estado">Estado</string>
    <string name="pedidos">Pedidos</string>
    <string name="precio">Precio</string>

    <string-array name="array_name">
        <item android:color="@color/grist_texto_logins">Elige tu talla<bitmap android:gravity="center_vertical|right" android:src="@drawable/grist_texto_logins" /></item>
        <item>Talla S</item>
        <item>Talla M</item>
        <item>Talla L</item>
        <item android:color="@color/rojo_general_texto"> Talla XL</item>
    </string-array>
</resources>