<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_general"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EnviarMensajeStockFragment"
    android:paddingBottom="40dp">

    <ImageView
        android:id="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/bienvenido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="8dp"
        android:gravity="bottom"
        android:text="@string/bienvenido_a_doble_b"
        android:textColor="@color/granate_principal"
        android:textSize="10.4413sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/iniciarSesionPagPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bienvenido"
        android:layout_marginTop="24dp"
        android:gravity="bottom"
        android:text="@string/introduce_tu_email_para_poder"
        android:textColor="@color/gris_texto"
        android:textSize="7.83sp" />


    <TextView
        android:id="@+id/emailRecuperarContra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSesionPagPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bienvenido"
        android:layout_marginTop="5dp"
        android:gravity="bottom"
        android:text="@string/notificarte_de_stock"
        android:textColor="@color/gris_texto"
        android:textSize="7.83sp" />

    <EditText
        android:id="@+id/crearCuentaNombreUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRecuperarContra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/logoemail"
        android:drawablePadding="15dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/introduce_tu_email"
        android:inputType="textPersonName"
        android:textSize="12sp" />

    <Button
        android:id="@+id/botonEnviarEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crearCuentaNombreUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/mybutton"
        android:fontFamily="@font/poppins_light"
        android:padding="21dp"
        android:text="@string/enviar_email"
        android:textColor="@color/white"
        android:textStyle="bold" />


</androidx.constraintlayout.widget.ConstraintLayout>