<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2EDED"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".DireccionEnvioFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/primeroMiIdentidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/volverPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:drawablePadding="10dp"
            android:focusable="true"
            android:fontFamily="@font/poppins"
            android:text="@string/tu_direcci_n"
            android:textColor="@color/rojo_general_texto"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/volveratraslogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaDirecciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="10dp"
        android:background="@color/fondo_general"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="1" />
    <Button
        android:id="@+id/botonPagar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pagar"
        android:textColor="@color/white"
        android:background="@drawable/mybutton" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/zeroresults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:paddingBottom="40dp">

            <TextView
                android:id="@+id/text0results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/grist_texto_logins"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imagen_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:src="@drawable/noencotrado"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text0results" />

            <TextView
                android:id="@+id/banejaNotificaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ninguna_direcci_n_encontrada"
                android:textAlignment="center"
                android:textColor="@color/rojo_general_texto"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagen_like" />

            <TextView
                android:id="@+id/graciasPorComprar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/gracias_por_comprar_en_doble_b"
                android:textAlignment="center"
                android:textColor="@color/grist_texto_logins"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/banejaNotificaciones" />

            <Button
                android:id="@+id/anadirDireccion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/mybutton"
                android:fontFamily="@font/poppins_light"
                android:padding="21dp"
                android:text="@string/pulsa_para_a_adir_una_direccion"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/graciasPorComprar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>