<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_general"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ContraseniaCambiadaLoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="40dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ImageView>

        <TextView
            android:id="@+id/bienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginTop="8dp"
            android:gravity="bottom"
            android:text="@string/bienvenido_a_doble_b"
            android:textColor="@color/granate_principal"
            android:textSize="10.4413sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

        </TextView>

        <TextView
            android:id="@+id/contraseniaLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bienvenido"
            android:layout_marginTop="24dp"
            android:gravity="bottom"
            android:text="@string/contrase_a_cambiada"
            android:textColor="@color/gris_texto"
            android:textSize="7.83sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bienvenido">
        </TextView>

        <TextView
            android:id="@+id/contraseniaCambiada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/poppins"
            android:text="@string/contrase_a_cambiada_con_xito"
            android:textAlignment="center"
            android:textColor="@color/rojo_general_texto"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contraseniaLogo" />
    </androidx.constraintlayout.widget.ConstraintLayout>>

</androidx.core.widget.NestedScrollView>