<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fondo_general"
    android:fillViewport="false"
    tools:context=".bottom_perfil_fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="40dp">


        <TextView
            android:id="@+id/perfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/perfil"
            android:textColor="@color/rojo_general_texto"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:alignContent="space_between"
            app:flexDirection="row"
            app:flexWrap="wrap"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/perfil">

            <LinearLayout
                android:id="@+id/primero"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                android:id="@+id/miCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:drawableTint="@color/rojo_general_texto"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/mi_cuenta"
                android:textColor="@color/granate"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableStartCompat="@drawable/usuariologo" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/segundo"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/misPedidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="40dp"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/mis_pedidos"
                    android:textColor="@color/granate"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableStartCompat="@drawable/logopedidos" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/tercero"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/misNotificaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="40dp"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/notificaciones"
                    android:textColor="@color/granate"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableStartCompat="@drawable/notificacioneslogo" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cuarto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/anadirProductos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="40dp"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/pulsa_para_a_adir_productos"
                    android:textColor="@color/granate"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:drawableStartCompat="@drawable/logomovil" />
            </LinearLayout>

        </com.google.android.flexbox.FlexboxLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>